# building_crm

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
apartments/: admin.py  models.py  serializers.py  urls.py  views.py
apartments/migrations/: 0001_initial.py  0002_rename_flat_apartment.py  0003_remove_apartment_category_remove_apartment_client_and_more.py  0004_alter_apartment_status.py  0005_apartment_client_name_apartment_client_number.py
config/: .env  settings.py  urls.py  validators.py
managers/: apps.py  models.py  serializers.py  urls.py  views.py
managers/migrations/: 0001_initial.py  0002_rename_name_manager_full_name.py
